# weechat-dingy

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
libdingy/: Cargo.toml  build.rs
libdingy/cpp/: CMakeLists.txt  libdingy.h  test.cpp
libdingy/src/: c_interop.rs  command.rs  lib.rs  message.rs  sync.rs
src/: .rustfmt.toml  codec.rs  command.rs  main.rs  message.rs  server.rs  sync.rs
